--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
                 <li class="nav-item"><a class="nav-link" href="/tab2/">Categories</a></li>
                 <li class="nav-item"><a class="nav-link" href="/tab3/">Service Items</a></li>
                 <li class="nav-item"><a class="nav-link" href="/tab4/">Full Inventory</a></li>
-                <li class="nav-item"><a class="nav-link" href="/tab5/">Laundry Inventory</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab5/">Laundry Contracts</a></li>
             </ul>
         </nav>
         <form action="/manual_refresh" method="POST" class="mt-2">
