--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
             <button type="submit" class="btn btn-primary">Refresh Data</button>
         </form>
         <form action="/manual_refresh_dev" method="POST" style="display: inline; margin-left: 10px;">
-            <button type="submit" class="btn btn-secondary">Refresh Test App</button>
+            <button type="submit" class="btn btn-secondary">!!!WARNING!!!REBOOT SERVER</button>
         </form>
     </div>
 </header>
