--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>RFID Inventory Dashboard</h1>
-<p>Welcome to the RFID Inventory Dashboard. Use the tabs above to view detailed information, or click "Refresh Now" to update data immediately.</p>
+<h1>RFID Inventory !!TEST!! Dashboard</h1>
+<p>Welcome to the RFID Inventory Testing Dashboard. Use the tabs above to view detailed information, or click "WARNING SERVER REBOOT" to update data immediately. THIS SERVER WILL HAVE NEWEST FEATURES</p>
 {% endblock %}
 
